--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal --logger trx --result-directory "TestResults"
 
     - name: Upload test results
-      uses: action/upload-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: dotnet-test-results
         path: TestResults
