--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
       run: dotnet build --no-restore
 
     - name: Test
-      run: dotnet test --no-build --verbosity normal --logger trx --result-directory "TestResults"
+      run: dotnet test --no-build --verbosity normal --logger trx --results-directory "TestResults"
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
