--- a/DesingPatterns/DesingPatterns.csproj
+++ b/DesingPatterns/DesingPatterns.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="State\BasicState\" />
+  </ItemGroup>
+
 </Project>
